--- a/PL/Views/Idioma/Form.cshtml
+++ b/PL/Views/Idioma/Form.cshtml
@@ -27,7 +27,10 @@
         <br />
         <div class="row">
             <div class="col-md-12">
-                <input type="submit" class="btn btn-success" value="Guardar" />
+                <input type="submit" class="btn btn-success" value="Guardar"/>
+
+
+                @Html.ActionLink(" Regresar", "GetAll", "Medio", htmlAttributes: new { @class = "btn btn-danger bi bi-box-arrow-left" })
             </div>
         </div>
     }
