--- a/PL/Views/Idioma/Modal.cshtml
+++ b/PL/Views/Idioma/Modal.cshtml
@@ -1,17 +1,27 @@
-﻿@model ML.Idioma
-@{
-    ViewData["Title"] = "Modal";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h1>@ViewBag.Titulo</h1>
+﻿<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="http://bootboxjs.com/bootbox.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
-<div class="alert alert-@ViewBag.alert alert-dismissible" role="alert">
-    @ViewBag.Message
+<div class="modal fade" tabindex="-1" role="dialog" id="modalValidacion">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Aviso</h4>
+            </div>
+            <div class="modal-body">
+                <p>@ViewBag.Mensaje</p>
+            </div>
+            <div class="modal-footer">
+                @Html.ActionLink("Cerrar", "GetAll", "Idioma", htmlAttributes: new { @class = "btn btn-danger" })
+            </div>
+        </div>
+    </div>
 </div>
-<br />
 
-<div>
-    <a href="@Url.ActionLink("GetAll", "Idioma")" class="btn btn-danger"><i class="bi bi-backspace-fill"></i>  Regresar</a>
-</div>
+<script>
+    $('#modalValidacion').modal('show');
+</script>
